crates/sdk-tests/tests/template/declaring_enum_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    enum MyEum {}
}

fn main() {}
